# Glance

./: README.md  build.gradle.kts  settings.gradle.kts
ModelTraining/: YOLO V5 modified log.txt  deploy_yolov5.py  export_yolov5_model.sh  main.ipynb  main.py  requirements.txt
ModelTraining/scripts/: convert_ncnn.sh  convert_ncnn_gru.sh  convert_ncnn_param-bin.sh
app/: build.gradle.kts  proguard-rules.pro
app/ml/: build.gradle.kts
app/ml/src/androidTest/java/io/github/xfy9326/glance/ml/: ExampleInstrumentedTest.kt
app/ml/src/main/: AndroidManifest.xml
app/ml/src/main/assets/labels/: vocab.txt
app/ml/src/main/cpp/: .gitignore  CMakeLists.txt  NCNN-VERSION.txt  NCNNPkgInfo.txt  ncnn_build_android.sh
app/ml/src/main/cpp/src/: data.h  debug.h  gru.cpp  gru.h  image_caption.cpp  image_caption.h  jni_interface.cpp  jvm_convert.cpp  jvm_convert.h  log.h  ml_manager.cpp  ml_manager.h  model.h  ncnn_helper.cpp  ncnn_helper.h  object_detector.cpp  object_detector.h  utils.cpp  utils.h  yolov5.cpp  yolov5.h
app/ml/src/main/cpp/src/models/: yolov5_general.id.h  yolov5_guide.id.h
app/ml/src/main/java/io/github/xfy9326/glance/ml/: LabelsUtils.kt  MLConfig.kt  MLManager.kt  NativeInterface.kt
app/ml/src/main/res/raw/: labels_model_guide.json
app/ml/src/main/res/raw-zh/: labels_model_general.json  labels_model_guide.json
app/ml/src/test/java/io/github/xfy9326/glance/ml/: ExampleUnitTest.kt
app/src/androidTest/java/io/github/xfy9326/glance/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/xfy9326/glance/: App.kt  MainActivity.kt
app/src/main/java/io/github/xfy9326/glance/activity/: AnalysisActivity.kt  CameraActivity.kt  FinderActivity.kt  GuideActivity.kt  MainActivity.kt  SceneActivity.kt
app/src/main/java/io/github/xfy9326/glance/io/: FileManager.kt  FileProvider.kt
app/src/main/java/io/github/xfy9326/glance/tools/: Base.kt  Context.kt  MimeType.kt  SuspendLazy.kt
app/src/main/java/io/github/xfy9326/glance/utils/: AnalysisCameraUtils.kt
app/src/main/java/io/github/xfy9326/glance/viewmodel/: MainViewModel.kt
app/src/main/res/drawable/: ic_blind_24.xml  ic_detection_24.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-night-v27/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/io/github/xfy9326/glance/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+82 files in other folders)
